# RubiksCube

./: .gitignore  CMakeLists.txt  Cube.cpp  Cube.hpp  README.md  Version.hpp.in  main.cpp
cmake/: GenerateGitVersion.cmake
source/: Cube.cpp  Cube.hpp  CubeManipulateFace.cpp  CubeRotations.cpp  CubeSolve.cpp
test/: TestCube.cpp  TestCubeRotations.cpp  TestCubeTwists.cpp
utils/: CubeParams.cpp  CubeParams.hpp  Utils.cpp  Utils.hpp  print_colors.sh
